<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_insert"
        android:icon="@drawable/ic_action_insert"
        android:showAsAction="always"
        android:title="@string/insert_into_db" />
    <item
        android:id="@+id/action_price_sorting"
        android:showAsAction="never"
        android:title="@string/price_sorting">
        <menu />
    </item>
    <item
        android:id="@+id/action_time_sorting"
        android:showAsAction="never"
        android:title="@string/time_sorting">
        <menu />
    </item>
    <item
        android:id="@+id/action_distances_sorting"
        android:showAsAction="never"
        android:title="@string/distances" />
    <item
        android:id="@+id/action_indexing"
        android:showAsAction="never"
        android:title="@string/title_activity_indexing" />
</menu>