<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ikramu.travelapp.android.MainActivity">

    <TextView
        android:id="@+id/textview_source"
        style="?android:textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinner_source_country"
        android:text="@string/source"
        android:visibility="invisible" />

    <Spinner
        android:id="@+id/spinner_source_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinner_destination"
        android:layout_toRightOf="@id/textview_source"
        android:visibility="invisible" />

    <Spinner
        android:id="@+id/spinner_source_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/spinner_source_country"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textview_destination"
        style="?android:textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinner_destination"
        android:text="@string/destination"
        android:visibility="invisible" />

    <Spinner
        android:id="@+id/spinner_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_source_country"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/textview_destination"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_destination"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/view_margin"
        android:layout_toRightOf="@id/textview_destination"
        android:onClick="onShowButtonClicked"
        android:text="@string/show"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@id/progressBar_loading"
        style="?android:attr/progressBarStyleLargeInverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/button_show" />
</RelativeLayout>
